Prepare the media editor to be Multiple

--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/Editors/mediapicker.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/Editors/mediapicker.html
@@ -6,7 +6,7 @@
                 <i class="icon icon-add large"></i>
                 <small>Choose {{property.editorName}}...</small>
             </a>
-            <img ng-src="{{property.value}}" alt="" ng-show="property.value">
+            <img ng-src="{{getUrl()}}" alt="" ng-show="getUrl()">
             <a href class="picked-image" ng-click="property.value = null" ng-show="property.value"><i class="icon icon-delete"></i></a>
         </li>
     </ul>
