--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/Editors/layersEditor.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/Editors/layersEditor.html
@@ -14,8 +14,8 @@
              data-ng-click="editLayer(layer)"
              data-ng-mouseover="setOverLayer(layer)"
              data-ng-mouseleave="initOverLayer()"
-             parentwidth="825"
-             parentheight="340">
+             parentwidth="1040"
+             parentheight="400">
 
             <div data-ng-click="handlerClick()" data-ng-mouseover="handlerMouseOver()" data-ng-mouseleave="handlerMouseLeave()">
 
@@ -28,56 +28,58 @@
 
     </div>
 
-    <div class="layer-panel">
+    <div class="umb-panel-body with-footer">
+        <div class="layer-panel">
 
-        <div class="layer-properties" ng-show="currentLayer">
-            <div ng-show="currentLayer.type=='text'">
-                <div class="property">
-                    <div unique-id="'layerTinyMce'"
-                         value="currentLayer.content"
-                         grid-rte configuration="rteConfig">
+            <div class="layer-properties" ng-show="currentLayer">
+                <div ng-show="currentLayer.type=='text'">
+                    <div class="property">
+                        <div unique-id="'layerTinyMce'"
+                             value="currentLayer.content"
+                             grid-rte configuration="rteConfig">
+                        </div>
                     </div>
-
-                    <input ng-model="currentLayer.horizontalCentered" type="checkbox"><label>force horizontal centered</label>
-
                 </div>
-            </div>
-            <div ng-show="currentLayer.type=='image'">
-                <div class="property">
-                    <img ng-click="updatePictureLayer(currentLayer)" ng-src="{{currentLayer.src}}" />
+                <div ng-show="currentLayer.type=='image'">
+                    <div class="property property-img">
+                        <img ng-click="updatePictureLayer(currentLayer)" ng-src="{{currentLayer.src}}" />
+                    </div>
                 </div>
+
+                <input ng-model="currentLayer.horizontalCentered" type="checkbox"><label>force horizontal centered</label>
+
             </div>
+
+            <div class="layer-order">
+
+                <div ui-sortable="sortableOptions" ng-model="model.value">
+                    <div ng-repeat="layer in model.value"
+                         class="layer-list"
+                         ng-class="{ selected: layer == currentLayer , hover: layer == overLayer }"
+                         ng-mouseover="setOverLayer(layer)"
+                         ng-mouseleave="initOverLayer()"
+                         ng-click="editLayer(layer)">
+
+                        <i class="icon {{layer.icon}} medium"></i>
+                        <span>{{layer.type}} {{layer.name}}</span>
+                        <i class="icon icon-navigation right medium"></i>
+                        <i class="icon icon-trash right medium" ng-click="removeLayer($index)"></i>
+
+                    </div>
+                </div>
+
+                <br />
+
+                <i class="icon icon-picture medium" ng-click="addPictureLayer()"></i>
+                <i class="icon icon-font medium" ng-click="addTextLayer()"></i>
+
+                <br />
+
+                <div class="help-text dark">Add new layer</div>
+
+            </div>
+
         </div>
-
-        <div class="layer-order">
-
-            <div ui-sortable="sortableOptions" ng-model="model.value">
-                <div ng-repeat="layer in model.value"
-                     class="layer-list"
-                     ng-class="{ selected: layer == currentLayer , hover: layer == overLayer }"
-                     ng-mouseover="setOverLayer(layer)"
-                     ng-mouseleave="initOverLayer()"
-                     ng-click="editLayer(layer)">
-
-                    <i class="icon {{layer.icon}} medium"></i>
-                    <span>{{layer.type}} {{layer.name}}</span>
-                    <i class="icon icon-navigation right medium"></i>
-                    <i class="icon icon-trash right medium" ng-click="removeLayer($index)"></i>
-
-                </div>
-            </div>
-
-            <br />
-
-            <i class="icon icon-picture medium" ng-click="addPictureLayer()"></i>
-            <i class="icon icon-font medium" ng-click="addTextLayer()"></i>
-
-            <br />
-
-            <div class="help-text dark">Add new layer</div>
-
-        </div>
-
     </div>
 
     <div class="umb-panel-footer">
@@ -92,7 +94,5 @@
             </div>
         </div>
     </div>
-
-
 
 </div>
