Grid config editor

--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/dialogs/parameterconfig.html
@@ -1,4 +1,4 @@
-﻿<div class="list-panel" ng-controller="BlenderGridEditorParameter.controller">
+﻿<div class="list-panel" ng-controller="Blendergrid.Parameterconfig.Controller">
 
     <div id="blender-grid-editor-parameter">
 
