--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/BlenderGridEditor.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/BlenderGridEditor/BlenderGridEditor.html
@@ -1,9 +1,10 @@
-﻿<div class="list-editor list-editor-{{control.editor.alias}}" ng-click="openListParameter()" ng-controller="BlenderGridEditor.controller">
+﻿<div class="list-editor list-editor-{{control.editor.alias}}" ng-click="openListParameter()" ng-controller="BlenderGrid.BlenderGridEditor.controller">
 
     <div ng-if="preview" ng-bind-html-unsafe="preview"></div>
 
-    <div class="empty-item" ng-hide="(control.value && control.value.length > 0 && preview) || !control.editor.config">
-        <h2 style="display:none">Loading {{control.editor.name}} ...</h2>
+    <div class="usky-editor-placeholder" ng-hide="preview">
+        <i class="icon icon-playing-cards"></i>
+        <div class="help-text ng-binding">{{control.editor.name}}</div>
     </div>
 
 </div>
