--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/colorpicker.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/colorpicker.html
@@ -1,6 +1,6 @@
 ﻿
 
 <div ng-controller="BlenderGrid.Editor.ColorPicker.controller">
-    <label>{{property.editorName}} :</label>
-    <input class="colorpickertoggle colorInput" ng-model="property.value">
+    <label>{{model.label}} :</label>
+    <input class="colorpickertoggle colorInput" ng-model="model.value">
 </div>
