--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/textarea.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/textarea.html
@@ -1,2 +1,2 @@
 ﻿
-<textarea type="text" placeholder="{{property.editorName}}" ng-model="property.value" />
+<textarea type="text" placeholder="{{model.label}}" ng-model="model.value" />
