--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/textstring.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/textstring.html
@@ -1,2 +1,2 @@
 ﻿
-<input type="text" placeholder="{{property.editorName}}" ng-model="property.value" />
+<input type="text" placeholder="{{model.label}}" ng-model="model.value" />
