--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/contentpicker.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/contentpicker.html
@@ -3,11 +3,11 @@
 
     <ul class="unstyled list-icons"
         ui-sortable="sortableOptions"
-        ng-model="property.value">
+        ng-model="model.value">
 
-        <li ng-repeat="node in property.value">
+        <li ng-repeat="node in model.value">
 
-            <i ng-show="property.value.length > 1" class="icon icon-navigation handle"></i>
+            <i ng-show="model.value.length > 1" class="icon icon-navigation handle"></i>
 
             <a href="#" prevent-default ng-click="remove($index)">
                 <i class="icon icon-delete red hover-show"></i>
@@ -18,11 +18,11 @@
 
     </ul>
 
-    <ul ng-show="property.value.length < config.maxNumber" class="unstyled list-icons">
+    <ul ng-show="model.value.length < config.maxNumber" class="unstyled list-icons">
         <li>
             <i class="icon icon-add blue"></i>
             <a href="#" ng-click="openContentPicker()" prevent-default>
-                <localize key="general_add">Add </localize> {{property.editorName}}
+                <localize key="general_add">Add </localize> {{model.label}}
             </a>
         </li>
     </ul>
