--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/iconpicker.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/editors/iconpicker.html
@@ -2,8 +2,9 @@
 <div id="iconPicker" ng-controller="BlenderGrid.Editor.IconPicker.controller">
 
     <a ng-click="openIconDialog()">
-        <i ng-show="!property.value || property.value == ''" ng-click="openIconDialog()" class="icon blue icon-add smaller left"></i>
-        <i ng-hide="!property.value || property.value == ''" class="{{config.defaultClass}} {{property.value}}"></i>Choose an Icon...
+        <i ng-show="!model.value || model.value == ''" ng-click="openIconDialog()" class="icon blue icon-add smaller left"></i>
+        <i ng-hide="!model.value || model.value == ''" class="result {{config.defaultClass}} {{model.value}}"></i>
+        <span ng-show="!model.value || model.value == ''">Choose an Icon...</span>
     </a>
 
 </div>
