Add frontView property in grid config to let the view be called from the generic blender controller through a child action

--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/dialogs/editorconfig.prevalues.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/dialogs/editorconfig.prevalues.html
@@ -43,9 +43,9 @@
                         </div>
                     </div>
                     <div class="umb-el-wrap">
-                        <label class="control-label">Render</label>
+                        <label class="control-label">Front View</label>
                         <div class="controls">
-                            <input type="text" ng-model="model.value.render" />
+                            <input type="text" ng-model="model.value.frontView" />
                         </div>
                     </div>
                     <div ng-show="!isBlenderEditor()" class="umb-el-wrap">
