--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/dialogs/editorconfig.prevalues.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/dialogs/editorconfig.prevalues.html
@@ -89,7 +89,7 @@
                                         <i class="icon icon-delete red pull-right" ng-click="remove($index)"></i>
                                         <a href="#" prevent-default="" ng-click="openParameterConfig(parameter)">
                                             {{parameter.name}}
-                                        </a> <small class="ng-binding">({{parameter.view}})</small>
+                                        </a> <!--<small class="ng-binding">({{parameter.propretyType.name}})</small>-->
                                     </li>
                                 </ul>
                                 <ul class="unstyled list-icons">
