--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/dialogs/parameterconfig.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/dialogs/parameterconfig.html
@@ -1,36 +1,47 @@
 ﻿<div class="list-panel" ng-controller="BlenderGrid.Dialog.Parameterconfig.Controller">
 
+
     <div id="blender-grid-editor-parameter">
 
-        <h3>{{name}}</h3>
-        <em>Edit your content here</em>
 
-        <div ui-sortable="sortableOptions" ng-model="model.value">
-            <div class="list list-field" ng-class="{'list-open':selected == item}" ng-click="select(item)" ng-repeat="item in model.value">
-                <span ng-show="model.value.length > 1" class="list-number">
-                    Item {{$index + 1}}
-                    <i ng-show="model.value.length > 1" class="icon right icon-navigation"></i>
-                    <i ng-show="(!config.fixed || config.fixed === 'false')" ng-click=" remove($index)" class="icon right icon-delete"></i>
-                </span>
-                <div class="list-field" ng-repeat="property in item | BlenderGridOrderObjectBy:'$order':false">
-                    <!--<div ng-include="initEditorPath(property)"></div>-->
-
-                    <blender-editor-wrapper property="property" item="item"></blender-editor-wrapper>
+        <div class="umb-panel-body no-header with-footer">
+            <div class="umb-forms-settings">
 
 
-                    <!--<ng-form >
-                        <umb-control-group label="{{property.name}}">
-                            <umb-editor model="property"></umb-editor>
-                        </umb-control-group>
-                    </ng-form>-->
+                <h3>{{name}}</h3>
+                <em>Edit your content here</em>
+
+                <div ui-sortable="sortableOptions" ng-model="model.value">
+                    <div class="list list-field" ng-class="{'list-open':selected === item, 'multiple':model.value.length > 1}" ng-click="select(item)" ng-repeat="item in model.value track by $index">
+                        <span ng-show="model.value.length > 1" class="list-number">
+                            {{$index + 1}}
+                            <i ng-show="model.value.length > 1" class="icon right icon-navigation"></i>
+                            <i ng-show="(!config.fixed || config.fixed === 'false')" ng-click=" remove(item, $index);$event.stopPropagation()" class="icon right icon-delete"></i>
+                        </span>
+                        <div class="list-field" ng-repeat="property in item | BlenderGridOrderObjectBy:'$order':false">
+                            <!--<div ng-include="initEditorPath(property)"></div>-->
+
+                            <h5>{{property.$editor.name}}</h5>
+
+                            <blender-editor-wrapper property="property" item="item"></blender-editor-wrapper>
 
 
+                            <!--<ng-form >
+                                <umb-control-group label="{{property.name}}">
+                                    <umb-editor model="property"></umb-editor>
+                                </umb-control-group>
+                            </ng-form>-->
+                        </div>
+
+
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div ng-show="!config.fixed && config.limit > model.value.length" class="list-add-row">
-            <i ng-click="add()" class="icon right icon-add"></i>
+            <div ng-show="!config.fixed && config.limit > model.value.length" class="list-add-row">
+                <i ng-click="add()" class="icon right icon-add"></i>
+            </div>
+
         </div>
 
         <div class="umb-panel-footer">
@@ -47,4 +58,8 @@
         </div>
 
     </div>
-</div>
+
+
+
+            </div>
+        </div>
