--- a/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.BlenderGrid.Ui/App_Plugins/Lecoati.BlenderGrid/core/dialogs/parameterconfig.prevalues.html
@@ -11,8 +11,8 @@
                     <div class="umb-el-wrap">
                         <label class="control-label"><strong>Type</strong></label>
                         <div class="controls">
-                            <select ng-change="change()" ng-options="type.view as type.name for type in defaultParameterList" ng-model="model.value.view">
-                                <option value="">- - custom - -</option>
+                            <select ng-change="change()" ng-options="type as type.name for type in defaultParameterList" ng-model="selectedPropertyType">
+                                <!--<option value="">- - custom - -</option>-->
                             </select>
                         </div>
                     </div>
@@ -31,10 +31,10 @@
                     <div class="umb-el-wrap" ng-show="isCustom()">
                         <label class="control-label"><strong>View</strong></label>
                         <div class="controls">
-                            <input type="text" ng-model="model.value.view" />
+                            <input type="text" ng-model="model.value.propretyType.view" />
                         </div>
                     </div>
-                    <div class="umb-el-wrap" ng-show="hasConfig() || isCustom()">
+                    <div class="umb-el-wrap" ng-show="isCustom()">
                         <label class="control-label">Config</label>
                         <div class="controls">
                             <textarea type="text" style="width: 386px; height: 228px;" ng-model="textAreaconfig" />
