--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/dialogs/parameterconfig.html
@@ -7,38 +7,32 @@
         <div class="umb-panel-body no-header with-footer">
             <div class="umb-forms-settings">
 
-
                 <h3>{{name}}</h3>
                 <em>Edit your content here</em>
 
-                <div ui-sortable="sortableOptions" ng-model="model.value">
-                    <div class="list list-field" ng-class="{'list-open':selected === item, 'multiple':model.value.length > 1}" ng-click="select(item)" ng-repeat="item in model.value track by $index">
-                        <span ng-show="model.value.length > 1" class="list-number">
+                <div ng-if="configLoaded" ui-sortable="sortableOptions" ng-model="model.value">
+                    <div class="list list-field" ng-class="{'list-open':selected === item, 'multiple':!(fixed && config.min == 1)}" ng-click="select(item)" ng-repeat="item in model.value track by $index">
+                        <span ng-show="!(fixed && config.min == 1)" class="list-number">
                             {{$index + 1}}
                             <i ng-show="model.value.length > 1" class="icon right icon-navigation"></i>
-                            <i ng-show="(!config.fixed || config.fixed === 'false')" ng-click=" remove(item, $index);$event.stopPropagation()" class="icon right icon-delete"></i>
+                            <i ng-show="!fixed && model.value.length > config.min" ng-click=" remove(item, $index);$event.stopPropagation()" class="icon right icon-delete"></i>
                         </span>
-                        <div class="list-field" ng-repeat="property in item | LeBlenderOrderObjectBy:'$order':false">
-                            <!--<div ng-include="initEditorPath(property)"></div>-->
+                        <div class="control-group umb-control-group" ng-repeat="property in item | LeBlenderOrderObjectBy:'$order':false">
+                            <div class="umb-el-wrap">
+                                <label class="control-label">
+                                    {{property.$editor.name}}
+                                    <small>ascsdscckj likchdl ahlkdashlkj ahlhl khfdlksajhlk dshjalkshlhfjdl akjhsfdl hfjdkl ahlks jhflak f</small>
+                                </label>
 
-                            <h5>{{property.$editor.name}}</h5>
+                                <blender-editor-wrapper property="property" item="item"></blender-editor-wrapper>
 
-                            <blender-editor-wrapper property="property" item="item"></blender-editor-wrapper>
-
-
-                            <!--<ng-form >
-                                <umb-control-group label="{{property.name}}">
-                                    <umb-editor model="property"></umb-editor>
-                                </umb-control-group>
-                            </ng-form>-->
+                            </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
 
-            <div ng-show="!config.fixed && config.limit > model.value.length" class="list-add-row">
+            <div ng-show="!fixed && config.max > model.value.length" class="list-add-row">
                 <i ng-click="add()" class="icon right icon-add"></i>
             </div>
 
