--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/dialogs/parameterconfig.prevalues.html
@@ -11,9 +11,7 @@
                     <div class="umb-el-wrap">
                         <label class="control-label"><strong>Type</strong></label>
                         <div class="controls">
-                            <select ng-change="change()" ng-options="type as type.name for type in defaultParameterList" ng-model="selectedPropertyType">
-                                <!--<option value="">- - custom - -</option>-->
-                            </select>
+                            <select ng-options="datatype.guid as datatype.name for datatype in availableDataTypes" ng-model="model.value.dataType"></select>
                         </div>
                     </div>
                     <div class="umb-el-wrap">
