--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/dialogs/parameterconfig.html
@@ -21,7 +21,7 @@
                             <div class="umb-el-wrap">
                                 <label class="control-label">
                                     {{property.$editor.name}}
-                                    <small>ascsdscckj likchdl ahlkdashlkj ahlhl khfdlksajhlk dshjalkshlhfjdl akjhsfdl hfjdkl ahlks jhflak f</small>
+                                    <small>{{property.$editor.description}}</small>
                                 </label>
 
                                 <blender-editor-wrapper property="property" item="item"></blender-editor-wrapper>
