--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/dialogs/parameterconfig.prevalues.html
@@ -26,6 +26,12 @@
                             <input type="text" ng-model="model.value.alias" />
                         </div>
                     </div>
+                    <div class="umb-el-wrap">
+                        <label class="control-label"><strong>Description</strong></label>
+                        <div class="controls">
+                            <textarea type="text" ng-model="model.value.description" />
+                        </div>
+                    </div>
                     <div class="umb-el-wrap" ng-show="isCustom()">
                         <label class="control-label"><strong>View</strong></label>
                         <div class="controls">
