--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/leblender.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/leblender.prevalues.html
@@ -2,7 +2,7 @@
 <div ng-controller="LeBlender.Prevalues.Controller">
 
     <ul class="unstyled list-icons umb-contentpicker" ui-sortable="" ng-model="model.value">
-        <li ng-repeat="editor in model.value track by $index">
+        <li class="smart" ng-repeat="editor in model.value track by $index">
             <i class="icon icon-delete red pull-right" ng-click="remove($index)"></i>
             <i class="icon icon-navigation handle"></i>
             <a href="#" prevent-default="" ng-click="openGridConfig(editor)">
