--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/leblendereditor.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/Lecoati.LeBlender/core/leblendereditor.html
@@ -1,10 +1,6 @@
-﻿<div class="list-editor list-editor-{{control.editor.alias}}" ng-click="openListParameter()" ng-controller="LeBlenderEditor.controller">
+﻿
 
-    <div ng-if="preview" ng-bind-html-unsafe="preview"></div>
-
-    <div class="usky-editor-placeholder preview-LeBlender" ng-hide="preview">
-        <i class="icon {{control.editor.icon}}"></i>
-        <div class="help-text ng-binding">{{control.editor.name}}</div>
-    </div>
-
-</div>
+<!--/***************************************/
+/* legacy adaptor 0.9.18 */
+/***************************************/-->
+<div ng-include="'/App_Plugins/Lecoati.LeBlender/editors/leblendereditor/LeBlendereditor.html'"></div>
