--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -1,8 +1,6 @@
 ﻿<div class="list-panel" ng-controller="LeBlender.Dialog.Parameterconfig.Controller">
 
-
     <div id="blender-grid-editor-parameter">
-
 
         <div class="umb-panel-body no-header with-footer">
             <div class="umb-forms-settings">
@@ -12,22 +10,18 @@
 
                 <div ng-if="configLoaded" ui-sortable="sortableOptions" ng-model="model.value">
                     <div class="list list-field" ng-class="{'list-open':selected === item, 'multiple':!(fixed && config.min == 1)}" ng-click="select(item)" ng-repeat="item in model.value track by $index">
+                        
                         <span ng-show="!(fixed && config.min == 1)" class="list-number">
                             {{$index + 1}}
                             <i ng-show="model.value.length > 1" class="icon right icon-navigation"></i>
                             <i ng-show="!fixed && model.value.length > config.min" ng-click=" remove(item, $index);$event.stopPropagation()" class="icon right icon-delete"></i>
                         </span>
-                        <div class="control-group umb-control-group" ng-repeat="property in item | LeBlenderOrderObjectBy:'$order':false">
-                            <div class="umb-el-wrap">
-                                <label class="control-label">
-                                    {{property.$editor.name}}
-                                    <small>{{property.$editor.description}}</small>
-                                </label>
 
-                                <blender-editor-wrapper property="property" item="item"></blender-editor-wrapper>
+                        <umb-control-group label="{{property.$editor.name}}" description="{{property.$editor.description}}" 
+                                           ng-repeat="property in item | LeBlenderOrderObjectBy:'$order':false">
+                            <blender-editor-wrapper property="property" item="item"></blender-editor-wrapper>
+                        </umb-control-group>
 
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
