changed "save" to "update"
Some customers are confused by the save button. they meant they could save the whole grid by press this button.

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -39,7 +39,7 @@
                         <localize key="general_cancel" class="ng-isolate-scope ng-scope">Cancel</localize>
                     </a>
                     <a ng-click="submit(model.value)" class="btn btn-primary">
-                        <localize key="buttons_save" class="ng-isolate-scope ng-scope">Save</localize>
+                        <localize key="actions_update" class="ng-isolate-scope ng-scope">Update</localize>
                     </a>
                 </div>
             </div>
