"Member groups datatype bug" broadcast formSubmitting on closing the right side bar

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -38,7 +38,7 @@
                     <a ng-click="close()" class="btn btn-link">
                         <localize key="general_cancel" class="ng-isolate-scope ng-scope">Cancel</localize>
                     </a>
-                    <a ng-click="submit(model.value)" class="btn btn-primary">
+                    <a ng-click="save()" class="btn btn-primary">
                         <localize key="actions_update" class="ng-isolate-scope ng-scope">Update</localize>
                     </a>
                 </div>
