Fix panel layout issues

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -1,6 +1,6 @@
-﻿<div class="list-panel" ng-controller="LeBlender.Dialog.Parameterconfig.Controller">
+<div class="list-panel" ng-controller="LeBlender.Dialog.Parameterconfig.Controller">
 
-    <div id="blender-grid-editor-parameter">
+    <div id="blender-grid-editor-parameter" class="umb-panel">
 
         <div class="umb-panel-body no-header with-footer">
             <div class="umb-forms-settings">
@@ -47,7 +47,4 @@
 
     </div>
 
-
-
-            </div>
-        </div>
+</div>
