Revert "Fix panel layout issues"
This reverts commit 59cf79470f375de5a5f9ffb2209b7ac50922f2c9.

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblendereditor.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/leblendereditor.html
@@ -1,10 +1,10 @@
-<div class="list-editor list-editor-{{control.editor.alias}}" ng-click="openListParameter()" ng-controller="LeBlenderEditor.controller">
+﻿<div class="list-editor list-editor-{{control.editor.alias}}" ng-click="openListParameter()" ng-controller="LeBlenderEditor.controller">
 
     <div ng-if="preview" ng-bind-html-unsafe="preview"></div>
 
     <div class="usky-editor-placeholder preview-LeBlender" ng-hide="preview">
         <i class="icon {{control.editor.icon}}"></i>
-        <div class="help-text">{{control.editor.name}}</div>
+        <div class="help-text ng-binding">{{control.editor.name}}</div>
     </div>
 
 </div>
