Remove Angular dynamic classes

--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
@@ -50,7 +50,7 @@
             <div class="umb-el-wrap umb-panel-buttons">
                 <div class="btn-toolbar umb-btn-toolbar pull-right">
                     <a ng-click="close()" class="btn btn-link">
-                        <localize key="general_cancel" class="ng-isolate-scope ng-scope">Cancel</localize>
+                        <localize key="general_cancel">Cancel</localize>
                     </a>
                     <button type="submit" data-hotkey="ctrl+s" class="btn btn-success">
                         <localize key="buttons_save">Save</localize>
