--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.html
@@ -36,10 +36,10 @@
             <div class="umb-el-wrap umb-panel-buttons">
                 <div class="btn-toolbar umb-btn-toolbar pull-right">
                     <a ng-click="close()" class="btn btn-link">
-                        <localize key="general_cancel" class="ng-isolate-scope ng-scope">Cancel</localize>
+                        <localize key="general_cancel">Cancel</localize>
                     </a>
                     <a ng-click="save()" class="btn btn-primary">
-                        <localize key="actions_update" class="ng-isolate-scope ng-scope">Update</localize>
+                        <localize key="actions_update">Update</localize>
                     </a>
                 </div>
             </div>
