--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/backoffice/GridEditorManager/edit.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/backoffice/GridEditorManager/edit.html
@@ -43,9 +43,9 @@
                     <!-- editor icon -->
                     <umb-control-group label="Editor icon" description="">
                         <div class="umbIconDropdownList">
-                            <a href="#" prevent-default="" ng-click="openIconPicker()" class="btn btn-link picker-icons" style="text-decoration:none !important">
-                                <i class="icon {{model.value.icon}}"></i>
-                                <span >Choose...</span>
+                            <i class="icon {{model.value.icon}}"></i>
+                            <a href="#" prevent-default ng-click="openIconPicker()" class="picker-icons">
+                                <localize key="general_choose">Choose</localize>...
                             </a>
                         </div>
                     </umb-control-group>
