--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
@@ -25,7 +25,7 @@
                         </umb-control-group>
 
                         <umb-control-group label="Description" description="">
-                            <textarea class="umb-editor umb-textstring" type="text" ng-model="model.value.description" />
+                            <textarea class="umb-editor umb-textstring" style="height: 100px;" ng-model="model.value.description" />
                         </umb-control-group>
 
                         <div ng-show="isCustom()">
@@ -36,7 +36,7 @@
 
                         <div ng-show="isCustom()">
                             <umb-control-group label="Config" description="">
-                                <textarea class="umb-editor umb-textstring" type="text" style="min-width: 66.6%; height: 100px;" ng-model="textAreaconfig" />
+                                <textarea class="umb-editor umb-textstring" style="height: 100px;" ng-model="textAreaconfig" />
                             </umb-control-group>
                         </div>
 
