--- a/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
+++ b/Src/Lecoati.LeBlender.Ui/App_Plugins/LeBlender/editors/leblendereditor/dialogs/parameterconfig.prevalues.html
@@ -30,7 +30,7 @@
 
                         <div ng-show="isCustom()">
                             <umb-control-group label="View" description="">
-                                <input class="umb-editor umb-textstring" type="text" ng-model="model.value.propretyType.view" />
+                                <input class="umb-editor umb-textstring" type="text" ng-model="model.value.propertyType.view" />
                             </umb-control-group>
                         </div>
 
